--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main style="background-color: #2E8B57">
         <table>
             <tr>
-                <td><img src="folder/1 фото" height="400px" width="300px">
+                <td><img src="1 фото.jpg" height="400px" width="300px">
                 </td>
                 <td> </td> <td>        </td>
                 
@@ -42,13 +42,13 @@
     ⊹ Ромашка: Заспокоює, допомагає при безсонні.<br/>⊹ Меліса: Знімає стрес та тривожність.<br/>⊹ Череда : Допомагає при шкірних захворювання.<br/> ⊹ Звіробій: покращує настрій, допомагає при депресії. </p> 
      ㅤ ㅤㅤㅤㅤ ㅤㅤ ㅤㅤㅤ ㅤㅤ ㅤ
      </td> <td> ㅤ </td>
-     <td><img src="folder/2 фото" height="350px" width="300px"> </td>
+     <td><img src="2 фото.jpg" height="350px" width="300px"> </td>
     </tr>
     </table>
     <p style="background-color: white; font-size:2px">ㅤ ㅤ </p>
     <table> 
         <tr> 
-            <td><img src="folder/3 фото" height="350px" width="300px"></td>
+            <td><img src="3 фото.jpg" height="350px" width="300px"></td>
             <td>  ㅤ</td> <td><p style="font-size:25px"><b>Рецепт чаю для гарного сну </b></p> <p style="font-size:20px">˗ˏˋ 𝓷𝓮𝔀 𝓹𝓸𝓼𝓽 🍂<br/>
 ☆/!!  Чай для гарного сну <br/>
 #Чаї <br/>
@@ -73,8 +73,8 @@
     <footer style="background-color: Honeydew">
         <table style="text-align:center">
             <tr>
-                <td> <img src="folder/4 фото.webp" width="80px"/></td><td> </td> <td> </td>
-                <td><img src="folder/5 фото" width="80px"/></td> 
+                <td> <img src="4 фото.webp" width="80px"/></td><td> </td> <td> </td>
+                <td><img src="5 фото.png" width="80px"/></td> 
                 <td> </td> 
                
             </tr>
