--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,179 @@
+<html>
 
+<head>
+    <title>Фітотерапія - важлива частина медецини</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+</head>
+
+<body style="font-family: Bitter;">
+    <header style="background-color: #2E8B57; font-family:'Brush Script MT'">
+        <p style="font-size:2px">ㅤ ㅤ </p>
+        <h1 style="text-align:center;font-size:27px">— ⟡ Фітотерапія - важлива частина медицини ⟡ —</h1>
+        <p style="font-size:2px">ㅤ ㅤ </p>
+
+
+    </header>
+    <main style="background-color: #2E8B57">
+        <table>
+            <tr>
+                <td><img src="https://i.pinimg.com/236x/e1/ab/a4/e1aba49b2ee0522e09ecdfa220827055.jpg" height="600px" width="350px">
+                </td>
+                <td> </td>
+                <td> </td>
+
+                <td>
+                    <p style="font-size:25px"><b> </b>Рецепт Трав'яного льду для шкіри з ромашки </p>
+                    <p style="font-size:17px"> 𝓷𝓮𝔀 𝓹𝓸𝓼𝓽 ⛄️ <br/>
+☆/!! Трав'яний лід для шкіри
+                з ромашки <br/>
+1 частина. <br/>
+#Рецепти ⊹ #Фітотерапія <br/>
+
+⊹ Трав'яний лід з ромашки - простий і ефективний засіб для догляду за шкірою. Він заспокоює, тонізує, знімає запалення та покращує колір обличчя.<br/>
+
+⊹ Інгредієнти:<br/>
+
+- 1 столова ложка сушених квіток ромашки (або 1 пакетик ромашкового чаю).
+- 200 мл окропу. <br/>
+
+⊹ Приготування:<br/>
+
+1. Заваріть настій: <br/>
+   Залийте окропом ромашку.<br/>
+   Накрийте кришкою і настоятися 15–20 хвилин. <br/>
+2. Остудіть: <br/>
+   Процідіть настій через марлю або дрібне сито, щоб забрати залишки трави.<br/>
+   Залишіть настій остигати до кімнатної температури.<br/>
+3. Заморозьте: <br/>
+   Розлийте настій у форми для льоду. <br/>
+   Поставте в морозильник на 3-4 години. </p>
+                </td>
+            </tr>
+        </table>
+
+        <p style="background-color:white; font-size:2px">ㅤㅤ </p>
+        <table>
+
+            <tr>
+                <td>
+                    <p style="font-size: 25px"><b> Рецепт Трав'яного льду для шкіри з ромашки 2 частина </b> </p>
+                    <p style="font-size: 20px"> ⊹ Як використовувати: <br/>
+
+- Вранці чи ввечері протирайте обличчя та шию кубиком льоду легкими круговими рухами. <br/>
+- Не тримайте лід довго на одному місці, щоб уникнути переохолодження шкіри. <br/>
+                        <br/>
+
+⊹ Корисні властивості:<br/>
+
+- заспокоює роздратування та почервоніння.<br/>
+- Зменшує запалення та висипання.<br/>
+- Тонізує та освіжає шкіру.<br/>
+- підходить для всіх типів шкіри, особливо для чутливої.<br/>
+                        <br/>
+⊹ Зберігати трав'яний лід можна до 5–7 днів у морозильнику.<br/>
+                    </p>
+                    ㅤ ㅤㅤㅤㅤ ㅤㅤ ㅤㅤㅤ ㅤㅤ ㅤ
+                </td>
+                <td> ㅤ </td>
+                <td><img src="https://i.pinimg.com/236x/da/7c/3b/da7c3b824c927dc124cb098436b7a104.jpg" height="550px" width="300px">
+                </td>
+            </tr>
+        </table>
+        <p style="background-color: white; font-size:2px">ㅤ ㅤ </p>
+        <table>
+            <tr>
+                <td><img src="https://i.pinimg.com/474x/3e/94/3a/3e943ab6d552e5f6fd38eff20ad25438.jpg" height="350px" width="300px">
+                </td>
+                <td> ㅤ</td>
+                <td>
+                    <p style="font-size:25px"><b>Лікувальна мазь із бузку</b></p>
+                    <p style="font-size:17px"> Лікувальна мазь із бузку <br/>
+#Рецепти <br/>
+                        <br/>
+                        <br/>
+Збережіть на майбутнє;) <br/>
+
+   ⊹ заливаємо квіточки бузку оливковою олією<br/>
+   ⊹ наполягаємо тиждень <br/>
+   ⊹ прогріваємо на водяній бані 5 хвилин <br/>
+   ⊹ після п'яти хвилин нагрівання, додаємо бджолиний віск, та нагріваємо до повного розтоплення воску <br/>
+   ⊹ коли вийшла однорідна рідина, наливаємо в баночку <br/>
+   ⊹ залишаємо застигати у прохолодному місці на 15 хвилин (наприклад холодильник) <br/>
+                        <br/>
+                    </p>
+
+
+                </td>
+            </tr>
+        </table>
+        <p style="background-color: white; font-size:2px">ㅤ ㅤ </p>
+        <table>
+            <tr>
+                <td>
+                    <p style="font-size: 25px"><b> Шипшинний чай </b> </p>
+                    <p style="font-size: 17px"> Шипшинний чай <br/>
+#Чаї ⊹ #Рецепти <br/>
+                        <br/>
+⊹ 2 ст. ложки плодів шипшини; <br/>
+⊹ 1 склянка води;; <br/>
+⊹ 1 ст. ложка чорного чаю; <br/>
+⊹ половина гілочки розмарину;; <br/>
+⊹ мед за смаком <br/>
+                        <br/>
+Приготування: <br/>
+⊹ доведіть воду до кипіння та остудіть її до 90 °C <br/>
+⊹ у порожній чайник налийте половину склянки окропу, накрийте кришкою і залиште на 2 хвилини. Потім вилийте воду і покладіть шипшину, чай та розмарин
+                        <br/>
+⊹ залийте плоди шипшини охолодженою водою і дайте настоятися чаю під кришкою 10–15 хвилин<br/>
+⊹ додайте цукор, мед або інший підсолоджувач за смаком<br/>
+⊹ подавайте чай гарячим<br/>
+                        <i> - Усі пости з каналу GrassForest!</i>
+                    </p>
+                </td>
+                <td> <img src="https://i.pinimg.com/474x/e2/01/ee/e201ee0070fc50f32e4f6a139d2a6206.jpg" height="350px" width="300px">
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td></td>
+            </tr>
+        </table>
+    </main>
+    <footer style="background-color: Honeydew">
+        <table style="text-align:center">
+            <tr>
+                <td> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/2048px-Telegram_2019_Logo.svg.png" width="80px"/>
+                </td>
+                <td> </td>
+                <td> </td>
+                <td><img src="https://i.ibb.co/wNRcCx3/image.png" width="80px"/></td>
+                <td> </td>
+<td><img src="https://i.ibb.co/YjwbQgx/image.png" width="80px"/></td>
+            </tr>
+
+            <tr>
+                <td><a href="https://t.me/GrassForest" style="color:#2E8B57">Канал о фітотерапії GrassForest</a></td>
+                <td> </td>
+                <td> </td>
+                <td><a href="https://ru.wikipedia.org/wiki/%D0%A4%D0%B8%D1%82%D0%BE%D1%82%D0%B5%D1%80%D0%B0%D0%BF%D0%B8%D1%8F#:~:text=%D0%A4%D0%B8%D1%82%D0%BE%D1%82%D0%B5%D1%80%D0%B0%D0%BF%D0%B8%CC%81%D1%8F%20(%D0%BE%D1%82%20%D0%B4%D1%80.,%C2%BB%2C%20XII%E2%80%94XIII%20%D0%B2%D0%B2."
+                        style="color:#2E8B57">Стаття про фітотерапію</a></td>
+<td><a href="index.html"
+                        style="color:#2E8B57">Головна</a></td>
+
+
+
+            </tr>                
+               
+                
+
+        </table>
+
+    </footer>
+</body>
+
+</html>
