--- a/index2.html
+++ b/index2.html
@@ -162,8 +162,7 @@
                 <td> </td>
                 <td><a href="https://ru.wikipedia.org/wiki/%D0%A4%D0%B8%D1%82%D0%BE%D1%82%D0%B5%D1%80%D0%B0%D0%BF%D0%B8%D1%8F#:~:text=%D0%A4%D0%B8%D1%82%D0%BE%D1%82%D0%B5%D1%80%D0%B0%D0%BF%D0%B8%CC%81%D1%8F%20(%D0%BE%D1%82%20%D0%B4%D1%80.,%C2%BB%2C%20XII%E2%80%94XIII%20%D0%B2%D0%B2."
                         style="color:#2E8B57">Стаття про фітотерапію</a></td>
-<td><a href="index.html"
-                        style="color:#2E8B57">Головна</a></td>
+<td> </td> </td><td><a href="index.html" style="color:#2E8B57">Головна</a></td>
 
 
 
